Added README.MD, merged base pom and project POM into one file.  Several cosmetic changes.